--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,8 @@
   <groupId>com.zs</groupId>
   <artifactId>TestGit</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  
+  </dependencies>
 </project>
