--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
 		</dependency>
-        
+
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
@@ -54,6 +54,12 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.38</version>
+		</dependency>
+		<!-- ningmengbanjiami -->
+		<dependency>
+			<groupId>com.lemon</groupId>
+			<artifactId>lemoner</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
